Opening some API data to public
