# routes/doctors.js
@@ -6,14 +6,15 @@ const {
   deleteDoctor,
   getDoctorStatic,
 } = require("../controller/doctors");
+const adminAuthentificationMiddleware = require("../middlewares/adminauthentification");
 
 const doctorroute = express.Router();
 
-doctorroute.route("/").get(getDoctors).post(addDoctor);
-doctorroute
-  .route("/:id")
-  .patch(updateDoctor)
-  .delete(deleteDoctor)
-  .get(getDoctorStatic);
+doctorroute.get("/", getDoctors);
+doctorroute.get("/:id", getDoctorStatic);
+
+doctorroute.use("/admin", adminAuthentificationMiddleware);
+doctorroute.post("/admin/", addDoctor);
+doctorroute.route("/admin/:id").patch(updateDoctor).delete(deleteDoctor);
 
 module.exports = doctorroute;
